# server_components

./: .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  CMakeSettings.json  ConanLibImports.cmake  NOTICE  README.md  conanfile.py
components/data/: CMakeLists.txt
components/data/sql_util/: CMakeLists.txt  database_common.h
components/data/sql_util/database_access/: CMakeLists.txt  database_crud_helpers.cpp  database_crud_helpers.h  database_crud_helpers_priv.h  database_crud_helpers_test.cpp  database_helper.cpp  database_helper.h  database_helper_base.h  database_helper_init.cpp  database_helper_init.h  database_helper_init_test.cpp  database_metadata.cpp  database_metadata.h  database_metadata_test.cpp  database_util.cpp  database_util.h  database_util_test.cpp  db_and_table_operations.cpp  db_and_table_operations.h  db_and_table_operations_test.cpp  extensions.cpp  extensions.h  extensions_test.cpp  pooled_transaction_provider.cpp  pooled_transaction_provider.h  pooled_transaction_provider_test.cpp  production_transaction_provider.cpp  production_transaction_provider.h  transaction.h  transaction_impl.cpp  transaction_impl.h  transaction_impl_test.cpp  transaction_provider.h
components/data/sql_util/json/: CMakeLists.txt  key_value_table_json.cpp  key_value_table_json.h  key_value_table_json_test.cpp
components/data/sql_util/schema/: CMakeLists.txt  column_info.cpp  column_info.h  column_info_test.cpp  database_info.cpp  database_info.h  database_info_test.cpp  foreign_key_manager.cpp  foreign_key_manager.h  foreign_key_manager_test.cpp  table_info.cpp  table_info.h  table_info_test.cpp
components/data/sql_util/stored_procedures/: CMakeLists.txt  create_stored_procedures.cpp  create_stored_procedures.h  get_admin_alerts_in_window.cpp  get_admin_alerts_in_window.h  get_admin_alerts_in_window_test.cpp  now_us.cpp  now_us.h  now_us_test.cpp
components/foundation/: CMakeLists.txt
components/foundation/util/: CMakeLists.txt  bounding_rect.cpp  bounding_rect.h  bounding_rect_test.cpp  date_time_util.cpp  date_time_util.h  date_time_util_test.cpp  destructive_guard.cpp  destructive_guard.h  destructive_guard_test.cpp  env.cpp  env.h  env_test.cpp  error_codes.h  error_response.cpp  error_response.h  error_response_test.cpp  file_util.cc  file_util.h  ical_generator.cpp  ical_generator.h  ical_generator_test.cpp  image_resize.cpp  image_resize.h  image_resize_test.cpp  json_util.cpp  json_util.h  json_util_test.cpp  json_value.h  json_value_test.cpp  logging.cpp  logging.h  logging_test.cpp  thread_pool.cpp  thread_pool.h  thread_pool_test.cpp  types.cpp  types.h  types_test.cpp
components/foundation/util/http/: CMakeLists.txt  http_client.cpp  http_client.h  http_client_test_util.cpp  http_client_test_util.h  http_client_test_util_test.cpp
components/platform/: CMakeLists.txt
components/platform/business_logic/auth/: CMakeLists.txt  auth_cookies.cpp  auth_cookies.h  auth_cookies_test.cpp  auth_helper.cpp  auth_helper.h  auth_helper_test.cpp  cookie_manager.cpp  cookie_manager.h  cookie_manager_test.cpp  cookie_manager_test_util.cpp  cookie_manager_test_util.h  login_gate.cpp  login_gate.h  login_gate_test.cpp  person.cpp  person.h  person_test.cpp  person_verify_mail.cpp  person_verify_mail.h  person_verify_mail_test.cpp  person_verify_mail_test_util.cpp  person_verify_mail_test_util.h  proxy_trust.cpp  proxy_trust.h  proxy_trust_test.cpp  quick_account_helper.cpp  quick_account_helper.h  quick_account_helper_test.cpp  quick_account_welcome_mail.cpp  quick_account_welcome_mail.h  quick_account_welcome_mail_test.cpp  server_config.cpp  server_config.h  server_config_test.cpp  service_account.cpp  service_account.h  service_account_test.cpp  session.cpp  session.h  (+4 more)
components/platform/business_logic/images/: CMakeLists.txt  image_helper.cpp  image_helper.h  image_helper_test.cpp  (+4 more)
components/platform/db_schema/: CMakeLists.txt  admin_alerts.cpp  admin_alerts.h  admin_column_data_info.cpp  admin_column_data_info.h  admin_column_enums.cpp  admin_column_enums.h  admin_column_friendly_names.cpp  admin_column_friendly_names.h  admin_column_redactions.cpp  admin_column_redactions.h  admin_enum_values.cpp  admin_enum_values.h  admin_enums.cpp  admin_enums.h  admin_nested_tables.cpp  admin_nested_tables.h  admin_table_display_template.cpp  admin_table_display_template.h  admin_table_friendly_names.cpp  admin_table_friendly_names.h  admin_table_permissions.cpp  admin_table_permissions.h  admin_top_level_tables.cpp  admin_top_level_tables.h  allowed_tables.cpp  allowed_tables.h  auth_events.cpp  auth_events.h  device_tokens.cpp  device_tokens.h  device_tokens_test.cpp  email_verifications.cpp  email_verifications.h  email_verifications_test.cpp  idempotency_keys.cpp  idempotency_keys.h  login_attempts.cpp  login_attempts.h  make_control_database_info.cpp  (+28 more)
components/platform/endpoints/: CMakeLists.txt  add_item.cpp  add_item.h  add_item_fetch_primary_key.cpp  add_item_fetch_primary_key.h  add_item_fetch_primary_key_test.cpp  add_item_test.cpp  cloudfront_origin_guard.cpp  cloudfront_origin_guard.h  cloudfront_origin_guard_test.cpp  csrf_guard.cpp  csrf_guard.h  csrf_guard_test.cpp  db_schema.cpp  db_schema.h  db_schema_test.cpp  delete_item.cpp  delete_item.h  delete_item_test.cpp  endpoint_auth_helper.cpp  endpoint_auth_helper.h  endpoint_auth_helper_tenancy_test.cpp  endpoint_auth_helper_test.cpp  get_filtered_table_rows.cpp  get_filtered_table_rows.h  get_filtered_table_rows_test.cpp  get_fk_options.cpp  get_fk_options.h  get_fk_options_test.cpp  get_row.cpp  get_row.h  get_row_by_values.cpp  get_row_by_values.h  get_row_by_values_test.cpp  get_row_test.cpp  get_rows_by_column.cpp  get_rows_by_column.h  get_rows_by_column_test.cpp  get_table_rows.cpp  get_table_rows.h  (+26 more)
components/services/: CMakeLists.txt
components/services/db_schema/: CMakeLists.txt  config_secrets.cpp  config_secrets.h
components/square/: CMakeLists.txt
components/testing/: CMakeLists.txt
components/testing/endpoints/: CMakeLists.txt  endpoint_test_helper.cpp  endpoint_test_helper.h
(+199 files in other folders)
